samples/_failures_safe/1761433479_00b300_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36b54a18.c: In function ‘main’:
./samples/SAFE/__tmp_36b54a18.c:161:5: error: expected expression at end of input
  161 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_36b54a18.c:161:5: error: expected declaration or statement at end of input
